# db-ssl-tls

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  setup.sh
src/main/: app.rs
src/main/storage/: db_config.rs  mod.rs
src/main/storage/migrations/: V001__A_schema.sql  V001__B_indexes.sql
